fix mobile card alignment

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -373,6 +373,8 @@ ul.intro-social-buttons > li {
 .knowledge-cards > div {
     display: flex;
     margin-bottom: 24px;
+    flex: 0 0 100%;
+    max-width: 100%;
 }
 
 .knowledge-card {
@@ -482,6 +484,20 @@ ul.intro-social-buttons > li {
     .intro-message,
     .knowledge-card {
         animation: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .knowledge-cards > div {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .knowledge-cards > div {
+        flex: 0 0 33.3333%;
+        max-width: 33.3333%;
     }
 }
 
